# CMAKE_TUTORIAL

01_basic_project_setup/: README.md
01_basic_project_setup/DroneControl/: CMakeLists.txt
01_basic_project_setup/DroneControl/include/: drone.h
01_basic_project_setup/DroneControl/lib/utils/: CMakeLists.txt
01_basic_project_setup/DroneControl/src/: drone.cpp  main.cpp
02_cmake_functions/: CMakeLists.txt  README.md
02_cmake_functions/ControllerModule/: CMakeLists.txt  Controller.cpp  Controller.hpp
02_cmake_functions/SensorModule/: CMakeLists.txt  Sensor.cpp  Sensor.hpp
02_cmake_functions/cmake/: create_module_library.cmake
